@@ -1,3 +1,8 @@
+2015-05-01  carl  <cth@carlh.net>
+
+	* Don't load image files whose names start with ._ as they
+	are probably OS X resource files (from master).
+
 2015-04-30  Carl Hetherington  <cth@carlh.net>
 
 	* Copy subtitle fonts to the DCP, and provide
